<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.credentials.StartFragment">

        <View
            android:id="@+id/logo_top_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.083"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_top_space"
            app:layout_constraintWidth_percent="0.331">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo" />

        </LinearLayout>

        <View
            android:id="@+id/your_fav_top_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.008"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <View
            android:id="@+id/rec_app_top_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.033"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/yourFavTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_regular"
            android:includeFontPadding="false"
            android:text="@string/your_fav"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:autoSizeMaxTextSize="19sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeStepGranularity="1.5sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_fav_top_space" />

        <TextView
            android:id="@+id/recAppTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/titillium_bold"
            android:includeFontPadding="false"
            android:text="@string/rec_app"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:autoSizeMaxTextSize="21sp"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rec_app_top_space" />

        <View
            android:id="@+id/login_btn_top_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.103"
            app:layout_constraintTop_toBottomOf="@+id/recAppTxt" />

        <Button
            android:id="@+id/loginBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/round_rect_with_ripple"
            android:fontFamily="@font/titillium_medium"
            android:text="@string/log_in"
            android:textColor="@color/colorAccent"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeStepGranularity="0.5sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintDimensionRatio="H, 1:0.18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn_top_space"
            app:layout_constraintWidth_percent="0.542" />

        <View
            android:id="@+id/signup_btn_top_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.022"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <Button
            android:id="@+id/signUpBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/round_rect_with_ripple"
            android:fontFamily="@font/titillium_medium"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeMinTextSize="15sp"
            app:autoSizeStepGranularity="0.5sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintDimensionRatio="H, 1:0.18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_btn_top_space"
            app:layout_constraintWidth_percent="0.542" />

<!--        <View-->
<!--            android:id="@+id/new_quick_login_top_space"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constraintHeight_percent="0.066"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />-->

<!--        <TextView-->
<!--            android:id="@+id/newQuickLoginTxt"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/titillium_regular"-->
<!--            android:includeFontPadding="false"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/colorPrimary"-->
<!--            app:autoSizeMaxTextSize="13sp"-->
<!--            app:autoSizeMinTextSize="8sp"-->
<!--            app:autoSizeStepGranularity="0.5sp"-->
<!--            app:autoSizeTextType="uniform"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/new_quick_login_top_space" />-->

<!--        <View-->
<!--            android:id="@+id/face_id_img_top_space"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constraintHeight_percent="0.036"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/newQuickLoginTxt" />-->

<!--        <LinearLayout-->
<!--            android:id="@+id/face_id_btn"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/face_id"-->
<!--            android:orientation="vertical"-->
<!--            app:layout_constraintDimensionRatio="W, 1:1"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/face_id_img_top_space"-->
<!--            app:layout_constraintWidth_percent="0.157" />-->

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:fontFamily="@font/titillium_regular"-->
<!--            android:includeFontPadding="false"-->
<!--            android:text="@string/use_face_id"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="#C6C3BD"-->
<!--            app:autoSizeMaxTextSize="11sp"-->
<!--            app:autoSizeMinTextSize="8sp"-->
<!--            app:autoSizeStepGranularity="0.5sp"-->
<!--            app:autoSizeTextType="uniform"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/face_id_btn" />-->

        <LinearLayout
            android:id="@+id/footerLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintWidth_percent="0.853"
            app:layout_constraintDimensionRatio="W, 0.153:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <TextView
                android:id="@+id/privacyPolicyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/privacy_policy"
                android:textColor="@color/url_link"
                android:fontFamily="@font/titillium_medium"
                app:autoSizeMaxTextSize="13sp"
                app:autoSizeMinTextSize="11sp"
                app:autoSizeStepGranularity="0.8sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/termsOfUseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/terms_of_use"
                android:textColor="@color/url_link"
                android:fontFamily="@font/titillium_medium"
                app:autoSizeMaxTextSize="13sp"
                app:autoSizeMinTextSize="11sp"
                app:autoSizeStepGranularity="0.8sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>